--- a/styles/style.css
+++ b/styles/style.css
@@ -114,11 +114,10 @@ html {
 /* --форма-текст-- */
 
 .search-form__textfield {
-
   width: 225px;
   height: 27px;
-  border-top: 1px solid;
-  border-bottom: 1px solid;
+  border-top: 1px solid currentColor;
+  border-bottom: 1px solid currentColor;
   border-left: 0;
   border-right: 0;
   background-color: transparent;
@@ -134,7 +133,7 @@ html {
   font-size: 16.2px;
   font-weight: 400;
   line-height: 100%;
-  color: rgb(255 255 255 / 0.7);
+  color: rgb(255, 255, 255, / 0.7);
 }
 
 .search-form__textfield:focus {
@@ -142,9 +141,8 @@ html {
 }
 
 .search-form__label:has(.search-form__textfield:focus-visible) {
-  outline: 5px solid red;
-  outline-offset: 5px;
-  border-radius: 10px;
+  outline: 1px solid currentColor;
+  outline-offset: 1px;
 }
 
 /* --форма-чекбоксы-- */
@@ -158,7 +156,7 @@ html {
 .search-form__pseudo-checkbox {
   width: 19px;
   height: 19px;
-  border: 1px solid rgba(255 255 255 1);
+  border: 1px solid rgba(255, 255, 255, 1);
   padding: 1px;
 
 }
@@ -210,7 +208,7 @@ html {
 }
 
 .content__accent {
-  color: rgba(84 80 80 1);
+  color: rgba(84, 80, 80, 1);
 }
 
 .content__list-container {
@@ -233,9 +231,9 @@ html {
 /* ===КНОПКИ=== */
 
 .button {
-  border: 1px solid rgba(255 255 255 1);
+  border: 1px solid rgba(255, 255, 255, 1);
   background-color: transparent;
-  color: rgba(255 255 255 1);
+  color: rgba(255, 255, 255, 1);
   font-weight: 700;
   font-size: 16px;
   cursor: pointer;
@@ -248,12 +246,12 @@ html {
 }
 
 /* ПОЧЕМУ?? У ОДНОЙ КНОПКИ СРАБАТЫВАЕТ ФИКСИРОВАННЫЙ height: 34px; А У ВТОРОЙ ТОЛЬКО ВМЕСТЕ СО СВОЙСТВОМ  line-height: 34px;*/
+/* при применении flex необходимо указывать min-height, обычная высота корректно работать не будет*/
 
 .more-button {
   width: 100%;
-  /* appearance: none; */
-  line-height: 34px;
-  height: 34px;
+  /* line-height: 34px; */
+  min-height: 34px;
 }
 
 .button:hover {
@@ -261,7 +259,7 @@ html {
 }
 
 .button:active {
-  background-color: rgba(84 80 80 1);
+  background-color: rgba(84, 80, 80, 1);
 }
 
 .button:focus {
@@ -289,16 +287,16 @@ html {
 
 .content__card-link {
   text-decoration: none;
-  color: rgba(255 255 255 1);
+  color: rgba(255, 255, 255, 1);
   display: block;
 }
 
 .content__card-link_current {
-  background-color: transparent;
+  background-color: rgba(84, 80, 80, 1);
 }
 
 .content__card-link:active {
-  background-color: rgba(84 80 80 1);
+  background-color: rgba(84, 80, 80, 1);
 }
 
 .content__card-link:hover {
@@ -356,7 +354,7 @@ html {
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
-  background: rgb(217 217 217 / 10%);
+  background: rgb(217, 217, 217, / 10%);
 }
 
 .custom-scrollbar::-webkit-scrollbar-thumb {
