--- a/styles/style.css
+++ b/styles/style.css
@@ -100,7 +100,6 @@ html {
 .search-form__fieldset-title {
   font-size: 18px;
   font-weight: 400;
-
 }
 
 .search-form__label {
@@ -126,7 +125,8 @@ html {
   font-size: 18px;
   font-weight: 400;
   line-height: 100%;
-  letter-spacing: 0;
+  letter-spacing: 0.7px;
+  font-family: 'Fira Sans Condensed', sans-serif;
 }
 
 .search-form__textfield::placeholder {
@@ -196,15 +196,19 @@ html {
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 26px;
 }
 
 .title {
   font-weight: 700;
   font-size: 75px;
-  line-height: 94%;
+  line-height: 0.9334;
   text-transform: uppercase;
   font-family: Oswald, sans-serif;
+  /* Сдвиг для компенсации зазора,
+   создаваемого метриками шрифта (ascender/descender).
+   Нужен для визуального совпадения с макетом. */
+  transform: translateY(3px);
 }
 
 .content__accent {
@@ -215,7 +219,9 @@ html {
   position: relative;
   inset: 0;
   height: 298px;
-  overflow: auto;
+  max-width: 399px;
+  overflow-y: auto;
+  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -235,8 +241,9 @@ html {
   background-color: transparent;
   color: rgba(255, 255, 255, 1);
   font-weight: 700;
-  font-size: 16px;
+  font-size: 18px;
   cursor: pointer;
+  font-family: inherit;
 }
 
 .search-form__submit-button {
@@ -324,6 +331,11 @@ html {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  /* Сдвиг для компенсации зазора,
+   создаваемого метриками шрифта (ascender/descender).
+   Нужен для визуального совпадения с макетом. */
+  line-height: 1;
+  transform: translateY(1px);
 }
 
 .content__video-card-description {
@@ -333,9 +345,14 @@ html {
   -webkit-line-clamp: 2;
   overflow: hidden;
   text-overflow: ellipsis;
+  /* Сдвиг для компенсации зазора,
+   создаваемого метриками шрифта (ascender/descender).
+   Нужен для визуального совпадения с макетом. */
+  transform: translateY(6px);
 }
 
 .content__video-card-description-container {
+
   flex-grow: 1;
 }
 
