--- a/styles/style.css
+++ b/styles/style.css
@@ -125,15 +125,16 @@ html {
   font-size: 18px;
   font-weight: 400;
   line-height: 100%;
-  letter-spacing: 0.7px;
   font-family: 'Fira Sans Condensed', sans-serif;
+  padding: 0 1px;
 }
 
 .search-form__textfield::placeholder {
-  font-size: 16.2px;
+  font-size: 18px;
   font-weight: 400;
   line-height: 100%;
-  color: rgb(255, 255, 255, / 0.7);
+  color: rgb(255, 255, 255, 0.7);
+  font-family: 'Fira Sans Condensed', sans-serif;
 }
 
 .search-form__textfield:focus {
@@ -196,7 +197,7 @@ html {
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 26px;
+  gap: 24px;
 }
 
 .title {
@@ -208,7 +209,7 @@ html {
   /* Сдвиг для компенсации зазора,
    создаваемого метриками шрифта (ascender/descender).
    Нужен для визуального совпадения с макетом. */
-  transform: translateY(3px);
+  /* transform: translateY(3px); */
 }
 
 .content__accent {
@@ -219,9 +220,7 @@ html {
   position: relative;
   inset: 0;
   height: 298px;
-  max-width: 399px;
   overflow-y: auto;
-  overflow-x: hidden;
   display: flex;
   flex-direction: column;
   gap: 30px;
@@ -230,7 +229,7 @@ html {
 .content__list {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 25px;
 }
 
 
@@ -321,6 +320,8 @@ html {
 .content__video-card {
   display: flex;
   align-items: flex-start;
+
+  padding: 2px 0;
 }
 
 .content__video-card-title {
@@ -331,11 +332,13 @@ html {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  line-height: 1;
+  margin-bottom: 5px;
   /* Сдвиг для компенсации зазора,
    создаваемого метриками шрифта (ascender/descender).
    Нужен для визуального совпадения с макетом. */
-  line-height: 1;
-  transform: translateY(1px);
+  /* line-height: 1;
+  transform: translateY(1px); */
 }
 
 .content__video-card-description {
@@ -348,11 +351,11 @@ html {
   /* Сдвиг для компенсации зазора,
    создаваемого метриками шрифта (ascender/descender).
    Нужен для визуального совпадения с макетом. */
-  transform: translateY(6px);
+  /* transform: translateY(6px); */
 }
 
 .content__video-card-description-container {
-
+  max-width: 196px;
   flex-grow: 1;
 }
 
